refactor(test): use `Arrays.asList` instead of `List.of` for java 8 compat